Fixed off centering issue and added functional toggle jimmy

--- a/style.css
+++ b/style.css
@@ -13,6 +13,17 @@ h1 {
     font-size: 1em;
     margin: 0;
 }
+h2 {
+    background-color: gray;
+    color: white;
+    display: block;
+    flex-direction: row;
+    align-items: left;
+    justify-content: left;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    margin: 0;
+}
 
 body {
     background-color: gray;
